# mollog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  zensical.toml
.claude/notes/: README.md  architecture.md  notes.md  open-questions.md
.claude/specs/: INDEX.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: api.md  behavior.md  configuration.md  context.md  getting-started.md  index.md  logfire.md  release-notes.md  rich.md
docs/stylesheets/: extra.css
src/mollog/: __init__.py  _formatter.py  _logfire.py  _logger.py  _manager.py  _rich.py  _stdlib_bridge.py  context.py  file_handler.py  filter.py  formatter.py  handler.py  level.py  logger.py  manager.py  queue.py  record.py  rich_handler.py  stdlib_bridge.py
tests/: test_context.py  test_file_handler.py  test_filter.py  test_formatter.py  test_handler.py  test_integration.py  test_level.py  test_lifecycle.py  test_logfire.py  test_logger.py  test_manager.py  test_module_api.py  test_queue.py  test_record.py  test_rich_handler.py
